[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causalimpactx"
version = "1.0.0"
authors = [
  { name="Yaseen Esmaeelpour", email="yaseenes@gmail.com" },
]
description = "A clone of R version CausalImpact developed by Google"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "pytensor",
  "pymc",
  "statsmodels",
]

[project.urls]
Homepage = "https://github.com/yaseenesmaeelpour/causalimpactx"
Issues = "https://github.com/yaseenesmaeelpour/causalimpactx/issues"